--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Контакти</title>
+    <title>{% block title %}Менеджер нотаток{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <style>
         body { padding-top: 2rem; }
@@ -14,18 +14,14 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'contacts:contact_list' %}">Менеджер контактів</a>
+        <a class="navbar-brand" href="{% url 'contacts:note_list' %}">Менеджер нотаток</a>
         <div class="navbar-nav">
-            <a class="nav-link" href="{% url 'contacts:contact_list' %}">Список</a>
-            <a class="nav-link" href="{% url 'contacts:contact_create' %}">Новий контакт</a>
+            <a class="nav-link" href="{% url 'contacts:note_list' %}">Список</a>
+            <a class="nav-link" href="{% url 'contacts:note_create' %}">Нова нотатка</a>
         </div>
     </div>
 </nav>
 <div class="container">
-    <div class="app-header d-flex align-items-center justify-content-between">
-        <h1 class="h3 m-0">{% block page_title %}{% endblock page_title %}</h1>
-        {% block header_actions %}{% endblock header_actions %}
-    </div>
     {% block content %}{% endblock content %}
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
