Handle missing note table more gracefully

--- a/contacts/templates/contacts/note_list.html
+++ b/contacts/templates/contacts/note_list.html
@@ -7,6 +7,12 @@
   <a class="btn btn-primary" href="{% url 'contacts:note_create' %}">Додати нотатку</a>
 </div>
 
+{% if setup_error %}
+  <div class="alert alert-warning" role="alert">
+    {{ setup_error }}
+  </div>
+{% endif %}
+
 <form method="get" class="row g-2 align-items-end mb-3">
   <div class="col-sm-4">
     <label class="form-label">Пошук</label>
